<resources>
    <string name="app_name">leftOver</string>
    <string name="start_activity">start activity</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="main_activity">main activity</string>
    <string name="definitions">Definitions</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="application_name">LEFT OVER</string>
    <string name="food_types_spinner_title">Pick Type</string>
    <string name="add_occasion">Add Occasion</string>
    <string name="save">Save</string>
    <string name="building">Building</string>
    <string name="room">Room</string>
    <string name="main_menu_about">About</string>
    <string name="about_leftover">© LeftOver</string>
    <string name="about_body_text">A special app made by students for the students.\nStudents help each other to find free food on campus.</string>
</resources>
